# effluz-ai-chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/effluzchatbot/: __init__.py  data_model.py  data_model_test.py
test/: test_bot.py  test_printables.py
